--- a/src/sass/base/_body.scss
+++ b/src/sass/base/_body.scss
@@ -4,8 +4,8 @@
   --secondaryTextColor: #ffffff;
   --footerTextColor: #545454;
 
-  --card-gap: 30px;
-  --card-item: 1;
+  // --card-gap: 30px;
+  // --card-item: 1;
 }
 
 body {
