--- a/src/partials/heder.html
+++ b/src/partials/heder.html
@@ -1,14 +1,19 @@
-<footer class="footer co">
-    <a href="#"><span class="i"></span> Filmoteka
-    </a>
-    <nav class="nav">
-        <ul class="nav__list">
-            <li class="nav__item">
-                <a class="nav__link" href="./index.html">Home</a>
-            </li>
-            <li class="nav__item">
-                <a class="nav__link" href="">my library</a>
-            </li>
-        </ul>
-    </nav>
-</footer>
+<header class="header co">
+    <div class="heder__dox">
+        <a class="logo" href="#"><span class="icon"><svg class="icon__logo" width="24" hidden="24">
+                    <use href="./imeges/srait.svg#icon-film"></use>
+                </svg>
+            </span> Filmoteka
+        </a>
+        <nav class="nav">
+            <ul class="nav__list">
+                <li class="nav__item">
+                    <a class="nav__link" href="./index.html">Home</a>
+                </li>
+                <li class="nav__item">
+                    <a class="nav__link" href="">my library</a>
+                </li>
+            </ul>
+        </nav>
+    </div>
+</header>
