--- a/src/sass/base/_body.scss
+++ b/src/sass/base/_body.scss
@@ -20,3 +20,31 @@ body {
   background-color: #ffffff;
   //   overflow-x: hidden;
 }
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
+}
+
+ul {
+  margin: 0;
+  padding-left: 0;
+}
+
+li {
+  list-style-type: none;
+  /* Убираем маркеры */
+}
+
+a {
+  text-decoration: none;
+}
+
+img {
+  display: block;
+}
