--- a/src/partials/heder.html
+++ b/src/partials/heder.html
@@ -16,4 +16,8 @@
             </ul>
         </nav>
     </div>
+    <form class="search-form" id="search-form">
+        <input class="imput_form" type="text" name="searchQuery" autocomplete="off" placeholder="Movie search" />
+        <button class="btn__form" type="submit">Search</button>
+    </form>
 </header>
