--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -61,3 +61,9 @@
 .nav__item:not(:last-child) {
   margin-right: 39px;
 }
+
+.search-form {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
