--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,3 +1,5 @@
 @import './base/common';
 @import './base/body';
-@import'./layout/header';
+@import './layout/header';
+@import './components/filmCards';
+@import './components/footer';
