--- a/src/partials/heder.html
+++ b/src/partials/heder.html
@@ -1,7 +1,7 @@
 <header class="header co">
     <div class="heder__dox">
         <a class="logo" href="#"><span class="icon"><svg class="icon__logo" width="24" hidden="24">
-                    <use href="./imeges/srait.svg#icon-film"></use>
+                    <use href="./images/srait.svg#icon-film"></use>
                 </svg>
             </span> Filmoteka
         </a>
