--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -1,6 +1,6 @@
 .header {
   padding: 40px;
-  background-image: url(../imeges/abstract-bac.jpg);
+  background-image: url(../images/abstract-bac.jpg);
   background-size: cover;
   width: 100%;
   margin: 0 auto;
