--- a/src/partials/heder.html
+++ b/src/partials/heder.html
@@ -1,6 +1,6 @@
 <header class="header co">
     <div class="heder__dox">
-        <a class="logo" href="#"><span class="icon"><svg class="icon__logo" width="24" hidden="24">
+        <a class="logo" href="#"><span class="icon"><svg class="icon__logo" width="24" height="24">
                     <use href="./images/srait.svg#icon-film"></use>
                 </svg>
             </span> Filmoteka
@@ -18,6 +18,8 @@
     </div>
     <form class="search-form" id="search-form">
         <input class="imput_form" type="text" name="searchQuery" autocomplete="off" placeholder="Movie search" />
-        <button class="btn__form" type="submit">Search</button>
+        <button class="btn__form" type="submit"><svg class="" width="12" height="12">
+                <use href="./images/srait.svg#icon-search"></use>
+            </svg></button>
     </form>
 </header>
