--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -1,11 +1,12 @@
 .header {
-  padding: 40px;
+
   background-image: url(../images/abstract-bac.jpg);
   background-size: cover;
   width: 100%;
   margin: 0 auto;
   background-repeat: no-repeat;
   background-position: center;
+  padding-bottom: 80px;
 }
 
 .logo {
@@ -20,7 +21,7 @@
   display: flex;
   align-items: center;
   text-align: center;
-  margin-bottom: 40px;
+  margin-top: 40px;
   color: var(--secondaryTextColor);
 }
 
@@ -34,7 +35,7 @@
 }
 
 .nav {
-  margin-bottom: 49px;
+  margin-top: 49px;
 }
 
 .nav__list {
@@ -64,6 +65,31 @@
 
 .search-form {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
+
+  border-bottom: 1px solid seashell;
+  width: 394px;
+  margin: 0 auto;
+  margin-top: 41px;
+}
+
+.imput_form {
+  border: none;
+  background-color: transparent;
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 16px;
+  display: flex;
+  align-items: center;
+
+  color: var(--secondaryTextColor);
+}
+
+.btn__form {
+  background-color: transparent;
+  border: none;
+
 }
