--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,5 +1,6 @@
 @import './base/common';
 @import './base/body';
 @import './layout/header';
+@import './layout/header_library';
 @import './components/filmCards';
 @import './components/footer';
