--- a/src/partials/header_librari.html
+++ b/src/partials/header_librari.html
@@ -1,4 +1,4 @@
-<header class="header co">
+<header class="header_library container">
     <div class="heder__dox">
         <a class="logo" href="#"><span class="icon"><svg class="icon__logo" width="24" height="24">
                     <use href="./images/srait.svg#icon-film"></use>
@@ -11,15 +11,13 @@
                     <a class="nav__link" href="./index.html">Home</a>
                 </li>
                 <li class="nav__item">
-                    <a class="nav__link" href="">my library</a>
+                    <a class="nav__link nav-akcent" href="./library.html">my library</a>
                 </li>
             </ul>
         </nav>
     </div>
-    <form class="search-form" id="search-form">
-        <input class="imput_form" type="text" name="searchQuery" autocomplete="off" placeholder="Movie search" />
-        <button class="btn__form" type="submit"><svg class="" width="12" height="12">
-                <use href="./images/srait.svg#icon-search"></use>
-            </svg></button>
-    </form>
+    <div class="btn_box">
+        <button class="btn_click  is-open" type="submit">Watched</button>
+        <button class="btn_click" type="submit">Queue</button>
+    </div>
 </header>
