--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -17,7 +17,7 @@
   font-style: normal;
   font-weight: 500;
   font-size: 30px;
-  line-height: 35px;
+  line-height: 1.15;
   display: flex;
   align-items: center;
   text-align: center;
@@ -48,7 +48,7 @@
   font-style: normal;
   font-weight: 500;
   font-size: 12px;
-  line-height: 14px;
+  line-height: 1.15;
   /* identical to box height */
 
   display: flex;
@@ -81,7 +81,7 @@
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
-  line-height: 16px;
+  line-height: 1.15;
   display: flex;
   align-items: center;
 
