--- a/src/partials/header_librari.html
+++ b/src/partials/header_librari.html
@@ -1,5 +1,5 @@
-<header class="header_library container">
-    <div class="heder__dox">
+<header class="header_library ">
+    <div class="heder__dox container">
         <a class="logo" href="#"><span class="icon"><svg class="icon__logo" width="24" height="24">
                     <use href="./images/srait.svg#icon-film"></use>
                 </svg>
