Card-films-style

--- a/src/partials/cardsFilm.html
+++ b/src/partials/cardsFilm.html
@@ -1,1 +1,1 @@
-<section><ul class="cards-film_list"></ul></section>
+<section class="container"><ul class="cards-film_list card-set"></ul></section>
