--- a/src/sass/base/_body.scss
+++ b/src/sass/base/_body.scss
@@ -3,7 +3,8 @@
   --primaryTextColor: #000000;
   --secondaryTextColor: #ffffff;
   --footerTextColor: #545454;
-
+  --card-item: 1;
+  --card-gap: 30px;
   // --card-gap: 30px;
   // --card-item: 1;
 }
