--- a/src/templates/filmCards.hbs
+++ b/src/templates/filmCards.hbs
@@ -1,9 +1,10 @@
 {{#each this}}
-  <li class='film-card'>
+  <li class='film-card card-item'>
     <img
       src='https://image.tmdb.org/t/p/w500/{{this.poster_path}}'
       alt=''
       loading='lazy'
+      class="film-image"
     />
     <div class='info'>
       <p class='film-tittle'>
