--- a/src/templates/filmCards.hbs
+++ b/src/templates/filmCards.hbs
@@ -19,6 +19,12 @@
         &#8739;
         {{this.release_date}}
       </p>
+      <p class ='film-id is-hidden'>
+        {{this.id}}
+      </p>
+      <p class ='film-rate is-hidden'>
+        {{this.vote_average}}
+      </p>
     </div>
   </li>
 {{/each}}
