--- a/src/partials/header_librari.html
+++ b/src/partials/header_librari.html
@@ -1,10 +1,13 @@
 <header class="header_library ">
     <div class="heder__dox container">
-        <a class="logo" href="#"><span class="icon"><svg class="icon__logo" width="24" height="24">
+        <div class="logo-box">
+            <span class="icon"><svg class="icon__logo" width="24" height="24">
                     <use href="./images/srait.svg#icon-film"></use>
                 </svg>
-            </span> Filmoteka
-        </a>
+            </span>
+            <a class="logo" href="#"> Filmoteka
+            </a>
+        </div>
         <nav class="nav">
             <ul class="nav__list">
                 <li class="nav__item">
