--- a/src/partials/header_librari.html
+++ b/src/partials/header_librari.html
@@ -5,7 +5,7 @@
                     <use href="./images/srait.svg#icon-film"></use>
                 </svg>
             </span>
-            <a class="logo" href="#"> Filmoteka
+            <a class="logo" href="./index.html"> Filmoteka
             </a>
         </div>
         <nav class="nav">
