--- a/src/partials/cardsFilm.html
+++ b/src/partials/cardsFilm.html
@@ -1,1 +1,6 @@
-<section class="container"><ul class="cards-film_list card-set"></ul></section>
+<section class="container">
+  <ul class="cards-film_list card-set"></ul>
+  <div class="backdrop is-hidden">
+    <div class="modal"></div>
+  </div>
+</section>
