--- a/src/templates/filmCards.hbs
+++ b/src/templates/filmCards.hbs
@@ -9,6 +9,7 @@
       alt='Poster of movie "{{this.original_title}}"'
       loading='lazy'
       class="film-image"
+      id="{{this.id}}"
     />
     <div class='info'>
       <p class='film-tittle'>
