--- a/src/partials/header_librari.html
+++ b/src/partials/header_librari.html
@@ -20,7 +20,7 @@
         </nav>
     </div>
     <div class="btn_box">
-        <button class="btn_click  is-open" type="submit">Watched</button>
-        <button class="btn_click" type="submit">Queue</button>
+        <button class="btn_click  is-open" type="submit" data-watched>Watched</button>
+        <button class="btn_click" type="submit" data-queue>Queue</button>
     </div>
 </header>
