--- a/src/partials/header_librari.html
+++ b/src/partials/header_librari.html
@@ -14,7 +14,7 @@
                     <a class="nav__link" href="./index.html">Home</a>
                 </li>
                 <li class="nav__item">
-                    <a class="nav__link nav-akcent" href="./library.html">my library</a>
+                    <a class="nav__link nav-akcent" id="library" href="./library.html">my library</a>
                 </li>
             </ul>
         </nav>
