--- a/src/sass/components/_filmCards.scss
+++ b/src/sass/components/_filmCards.scss
@@ -1,4 +1,5 @@
-.cards-film_list {
+.cards-film_list,
+.library-film_list {
   width: 100%;
   display: flex;
   @media screen and (min-width: 768px) {
