--- a/src/sass/base/_body.scss
+++ b/src/sass/base/_body.scss
@@ -13,6 +13,7 @@ body {
   margin: 0;
 
   font-family: 'Roboto', sans-serif;
+  font-style: normal;
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
