--- a/src/sass/base/_modal.scss
+++ b/src/sass/base/_modal.scss
@@ -18,13 +18,190 @@
     pointer-events: none;
   }
 }
+
 .modal {
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%) scale(1);
 
-  width: 500px;
-  max-height: 500px;
+  width: 280px;
   background-color: white;
+  padding: 0 20px;
+  padding-top: 48px;
+  padding-bottom: 40px;
+
+  @media screen and (min-width: 768px) {
+    width: 704px;
+    display: flex;
+    padding-top: 40px;
+    padding-left: 36px;
+    padding-right: 72px;
+
+  }
+
+  @media screen and (min-width: 1280px) {
+    width: 806px;
+    padding: 40px 12px;
+
+  }
+
+}
+
+.modal__img {
+  display: block;
+  max-width: 240px;
+  margin: 0 auto;
+  margin-bottom: 20px;
+  border-radius: 5px;
+
+  @media screen and (min-width: 768px) {
+    max-width: 264px;
+    margin-right: 68px;
+  }
+
+  @media screen and (min-width: 1280px) {
+    max-width: 375px;
+    margin-right: 16px;
+  }
+
+
+}
+
+.modal__tatel {
+  font-size: 20px;
+  line-height: 1.15;
+  text-transform: uppercase;
+  color: #000000;
+  margin-bottom: 20px;
+
+  @media screen and (min-width: 1280px) {
+    font-size: 30px;
+    line-height: 1.16;
+  }
+}
+
+.modal__label {
+  font-size: 12px;
+  line-height: 1.33;
+  /* identical to box height, or 133% */
+  color: #8C8C8C;
+}
+
+.modal__label:not(:last-child) {
+  margin-bottom: 8px;
+}
+
+.votes-box {
+  margin-left: 41px;
+}
+
+.modal__vote {
+  width: 36px;
+  height: 16px;
+
+  font-size: 12px;
+  line-height: 1.16;
+
+
+  /* identical to box height */
+  padding: 1px;
+  padding-left: 8px;
+  padding-right: 5px;
+  background-color: #FF6B01;
+  border-radius: 5px;
+  color: #FFFFFF;
+}
+
+.modal__votes {
+
+
+  font-size: 12px;
+  line-height: 1.16;
+  color: var(--primaryTextColor);
+}
+
+.modal__populars {
+
+  font-size: 12px;
+  line-height: 14px;
+  color: var(--primaryTextColor);
+  margin-left: 53px;
+}
+
+.origenal__tatel {
+  font-size: 12px;
+  line-height: 1.16;
+  text-transform: uppercase;
+  color: var(--primaryTextColor);
+  margin-left: 42px;
+
+}
+
+.modal__genre {
+  font-size: 12px;
+  line-height: 1.16;
+  color: var(--primaryTextColor);
+  margin-left: 76px;
+
+}
+
+.gender_ris {
+  font-size: 12px;
+  line-height: 1.33;
+  /* identical to box height, or 133% */
+  color: #8C8C8C;
+}
+
+.about {
+  font-size: 12px;
+  line-height: 1.33;
+  text-transform: uppercase;
+  color: var(--primaryTextColor);
+  margin-bottom: 8px;
+}
+
+.about_text {
+  font-size: 12px;
+  line-height: 1.66;
+  color: var(--primaryTextColor);
+  margin-bottom: 20px;
+}
+
+.btn__modal {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  @media screen and (min-width: 1280px) {
+    justify-content: flex-start;
+  }
+}
+
+.btn__add {
+  width: 110px;
+  height: 44px;
+  border-radius: 5px;
+  background-color: transparent;
+  font-size: 12px;
+  line-height: 1.33;
+  text-transform: uppercase;
+  color: var(--primaryTextColor);
+  border: 1px solid #000000;
+
+  @media screen and (min-width: 768px) {
+    width: 125px;
+  }
+}
+
+.btn__add:not(:last-child) {
+  @media screen and (min-width: 1280px) {}
+
+  margin-right: 15px;
+}
+
+.btn__add-click {
+  color: var(--secondaryTextColor);
+  border: none;
+  background-color: #FF6B01;
 }
