--- a/src/templates/modal.hbs
+++ b/src/templates/modal.hbs
@@ -16,6 +16,7 @@ src='https://png.pngtree.com/png-clipart/20211121/original/pngtree-not-found-sta
 <p class="modal__label">Genre <span class="modal__genre" > {{#each this.genres}}{{this.name}} <span class="gender_ris">/</span>{{/each}}</span></p>
 <h3 class="about">About</h3>
 <p class="about_text"> {{this.overview}}</p>
+<article class="film-id is-hidden ">{{this.id}}</article>
 <div class="btn__modal"><button class="btn__add btn__add-click" type='button' data-watched>Add to watched</button>
 <button class="btn__add " type='button' data queue >Add to queue</button></div>
 </div>
