--- a/src/templates/modal.hbs
+++ b/src/templates/modal.hbs
@@ -1,4 +1,14 @@
+{{!-- <button class="modal-clouse-btn">
+  <svg class="icon__close" width="14" height="14">
+                    <use class="icon__close" href="./images/srait.svg#icon-clouz"></use>
+                </svg>
+</button> --}}
 
+ <button class="close-button" type="button" data-modal-close>
+          <svg class="icon-cose" width="30" height="30">
+            <use class="svg" href="./images/sprait.svg#icon-close"></use>
+          </svg>
+        </button>
 <img class="modal__img"
 {{#if this.poster_path}} 
 src='https://image.tmdb.org/t/p/w500/{{this.poster_path}}'
@@ -20,4 +30,5 @@ src='https://png.pngtree.com/png-clipart/20211121/original/pngtree-not-found-sta
 <div class="btn__modal"><button class="btn__add btn__add-click" type='button' data-watched>Add to watched</button>
 <button class="btn__add " type='button' data queue >Add to queue</button></div>
 </div>
+
 
