--- a/src/templates/modalCards.hbs
+++ b/src/templates/modalCards.hbs
@@ -6,7 +6,7 @@
 
  <button class="close-button" type="button" data-modal-close>
           <svg class="icon-cose" width="30" height="30">
-            <use class="svg" href="./images/sprait.svg#icon-close"></use>
+            <use class="svg" href="../images/sprait.svg#icon-menu-cross"></use>
           </svg>
         </button>
 <img class="modal__img"
