--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,5 +1,6 @@
 <header class="header ">
     <div class="heder__dox container">
+        <include src="./partials/checkBox.html"></include>
         <div class="logo-box">
             <span class="icon"><svg class="icon__logo" width="24" height="24">
                     <use href="./images/srait.svg#icon-film"></use>
