--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -3,6 +3,7 @@
 @import './base/container';
 @import './layout/header';
 @import './layout/header_library';
+@import './components/checkBox';
 @import './components/filmCards';
 @import './components/footer';
 @import './base/card-Set';
