--- a/src/sass/layout/_header_library.scss
+++ b/src/sass/layout/_header_library.scss
@@ -1,5 +1,6 @@
 .header_library {
-  background-image: url(../images/abstract-mob.jpg);
+  position: relative;
+  background-image: url(../images/back_for_lib_mob.jpg);
   background-size: cover;
   width: 100%;
   margin: 0 auto;
@@ -8,7 +9,7 @@
   padding-bottom: 62px;
 
   @media screen and (min-width: 768px) {
-    background-image: url(../images/abstract-tab.jpg);
+    background-image: url(../images/back_for_lib_tab.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -18,18 +19,17 @@
   }
 
   @media screen and (min-width: 1280px) {
-    background-image: url(../images/abstract-bac.jpg);
+    background-image: url(../images/back_for_lib.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
     margin: 0 auto;
     width: 100%;
   }
-
 }
 
 .nav-akcent {
-  border-bottom: 2.5px solid #FF001B;
+  border-bottom: 2.5px solid #ff001b;
 }
 
 .btn_box {
@@ -55,13 +55,9 @@
   font-size: 12px;
   line-height: 1.33;
 
-
-  border: 1px solid #FFFFFF;
-
+  border: 1px solid #ffffff;
 
   color: var(--secondaryTextColor);
-
-
 }
 
 .btn_click:not(:last-child) {
@@ -69,6 +65,6 @@
 }
 
 .is-open {
-  background: #FF6B01;
+  background: #ff6b01;
   border: none;
 }
