--- a/src/partials/checkBox.html
+++ b/src/partials/checkBox.html
@@ -1,3 +1,11 @@
 <div class="ligth-checkbox">
-    <input type="checkbox" name="ligthswitcher">
+    <input type="checkbox" name="ligthswitcher" >
+    <svg  class="moon-icon">
+        <use href="./images/srait.svg#icon-moon" width="20" height="20"></use>
+        </svg>
+    <svg class="sun-icon">
+        <use href="./images/srait.svg#icon-sun" width="20" height="20">
+
+        </use>
+    </svg>
 </div>
