--- a/src/sass/base/_modal.scss
+++ b/src/sass/base/_modal.scss
@@ -1,5 +1,6 @@
 .backdrop {
   position: fixed;
+  z-index: 4;
   top: 0;
   left: 0;
 
@@ -38,21 +39,17 @@
     padding-top: 40px;
     padding-left: 36px;
     padding-right: 72px;
-
   }
 
   @media screen and (min-width: 1280px) {
     width: 806px;
     padding: 40px 12px;
-
   }
-
-
 }
 
 .close-button {
   position: absolute;
-  content: "";
+  content: '';
   display: flex;
   align-items: center;
   justify-content: center;
@@ -63,7 +60,7 @@
   top: 8px;
 
   border-radius: 50%;
-  background: #FFFFFF;
+  background: #ffffff;
   border: 1px solid rgba(0, 0, 0, 0.1);
   box-sizing: border-box;
   z-index: 3;
@@ -119,8 +116,6 @@
     max-width: 375px;
     margin-right: 16px;
   }
-
-
 }
 
 .modal__tatel {
@@ -140,7 +135,7 @@
   font-size: 12px;
   line-height: 1.33;
   /* identical to box height, or 133% */
-  color: #8C8C8C;
+  color: #8c8c8c;
 }
 
 .modal__label:not(:last-child) {
@@ -158,26 +153,22 @@
   font-size: 12px;
   line-height: 1.16;
 
-
   /* identical to box height */
   padding: 1px;
   padding-left: 8px;
   padding-right: 5px;
-  background-color: #FF6B01;
+  background-color: #ff6b01;
   border-radius: 5px;
-  color: #FFFFFF;
+  color: #ffffff;
 }
 
 .modal__votes {
-
-
   font-size: 12px;
   line-height: 1.16;
   color: var(--primaryTextColor);
 }
 
 .modal__populars {
-
   font-size: 12px;
   line-height: 14px;
   color: var(--primaryTextColor);
@@ -190,7 +181,6 @@
   text-transform: uppercase;
   color: var(--primaryTextColor);
   margin-left: 42px;
-
 }
 
 .modal__genre {
@@ -198,14 +188,13 @@
   line-height: 1.16;
   color: var(--primaryTextColor);
   margin-left: 76px;
-
 }
 
 .gender_ris {
   font-size: 12px;
   line-height: 1.33;
   /* identical to box height, or 133% */
-  color: #8C8C8C;
+  color: #8c8c8c;
 }
 
 .about {
@@ -250,7 +239,8 @@
 }
 
 .btn__add:not(:last-child) {
-  @media screen and (min-width: 1280px) {}
+  @media screen and (min-width: 1280px) {
+  }
 
   margin-right: 15px;
 }
@@ -258,5 +248,5 @@
 .btn__add-click {
   color: var(--secondaryTextColor);
   border: none;
-  background-color: #FF6B01;
+  background-color: #ff6b01;
 }
