--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -143,6 +143,10 @@
   line-height: 16px;
 }
 
+.imput_form:focus {
+  outline: none;
+}
+
 .btn__form {
   background-color: transparent;
   border: none;
