--- a/src/sass/base/_body.scss
+++ b/src/sass/base/_body.scss
@@ -19,8 +19,11 @@ body {
   line-height: 1.2;
   //   color: var(--primaryTextColor);
 
-  background-color: #ffffff;
+  // background-color: #ffffff;
   //   overflow-x: hidden;
+}
+.night {
+  background: #141414;
 }
 
 h1,
@@ -31,6 +34,9 @@ h5,
 h6,
 p {
   margin: 0;
+}
+h3 .night-theme {
+  color: #ffffff;
 }
 
 ul {
