--- a/src/partials/cardsFilm.html
+++ b/src/partials/cardsFilm.html
@@ -1,5 +1,6 @@
 <section class="container">
   <ul class="cards-film_list card-set"></ul>
+  <div id="pagination-container" class="pagination"></div>
   <div class="backdrop is-hidden">
     <div class="modal"></div>
   </div>
