--- a/src/sass/components/_filmCards.scss
+++ b/src/sass/components/_filmCards.scss
@@ -29,9 +29,9 @@
   //   line-height: 1.33;
   //   text-transform: uppercase;
 }
-.film-tittle {
-  color: #000000;
-}
+// .film-tittle {
+//   color: #000000;
+// }
 .film-genre {
   color: #ff6b08;
 }
