--- a/src/sass/base/_body.scss
+++ b/src/sass/base/_body.scss
@@ -36,7 +36,7 @@ h6,
 p {
   margin: 0;
 }
-h3 .night-theme {
+.nigthText {
   color: #ffffff;
 }
 
@@ -66,4 +66,3 @@ img {
 button {
   cursor: pointer;
 }
-
