--- a/src/sass/components/_checkBox.scss
+++ b/src/sass/components/_checkBox.scss
@@ -83,6 +83,6 @@ input:checked[type='checkbox']:after {
 .sun-icon .is-off {
   fill: black;
 }
-.nigthText {
-  color: #fff;
+.nightText {
+  color: white;
 }
