--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,4 +1,4 @@
-<footer class="foot">
+<footer>
   <div class="footer">
     <div class="page__footer">
       <p class="copyright">&copy; 2022 | All Rights Reserved |&nbsp;</p>
