--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -2,11 +2,11 @@ p {
   padding: 0;
   margin: 0;
 }
-.foot {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-}
+// .foot {
+//   position: absolute;
+//   bottom: 0;
+//   width: 100%;
+// }
 
 .footer {
   margin-left: auto;
