--- a/src/partials/cardsFilm.html
+++ b/src/partials/cardsFilm.html
@@ -2,6 +2,7 @@
   <ul class="cards-film_list card-set"></ul>
   <div id="pagination-container" class="pagination"></div>
   <div class="backdrop is-hidden">
-    <div class="modal"></div>
+    <div class="modal">
+    </div>
   </div>
 </section>
