--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -2,10 +2,11 @@
     <div class="heder__dox container">
         <include src="./partials/checkBox.html"></include>
         <div class="logo-box">
-            <span class="icon"><svg class="icon__logo" width="24" height="24">
-                    <use href="./images/srait.svg#icon-film"></use>
-                </svg>
-            </span>
+            <a href="./index.html"><span class="icon"><svg class="icon__logo" width="24" height="24">
+                        <use href="./images/srait.svg#icon-film"></use>
+                    </svg>
+                </span></a>
+
             <a class="logo" href="./index.html"> Filmoteka
             </a>
         </div>
