--- a/src/templates/libraryCards.hbs
+++ b/src/templates/libraryCards.hbs
@@ -1,4 +1,4 @@
-  <li class='film-card card-item'>
+  <li class='film-card card-item' data-id={{this.id}}>
     <img
       {{#if this.poster_path}} 
       src='https://image.tmdb.org/t/p/w500/{{this.poster_path}}'
