--- a/src/templates/modalCards.hbs
+++ b/src/templates/modalCards.hbs
@@ -1,5 +1,5 @@
 
- <button class="close-button" type="button" data-action= "close">
+ <button class="close-button" type="button" data-action= "close" data-id={{this.id}}>
         </button>
 
 <img class="modal__img"
