--- a/src/templates/filmCards.hbs
+++ b/src/templates/filmCards.hbs
@@ -13,9 +13,9 @@
       id="{{this.id}}"
     />
     <div class='info'>
-      <h3 class='film-tittle'>
+      <p class='film-tittle'>
         {{this.original_title}}
-      </h3>
+      </p>
       <p class='film-genre'>
         {{#each genre_ids}} {{this}}{{#unless @last}}, {{/unless}}{{/each}}
         &#8739;
