--- a/src/partials/libraryFilms.html
+++ b/src/partials/libraryFilms.html
@@ -1,6 +1,7 @@
 <section class="container">
-    <ul class="library-film_list card-set"></ul>
-    <div class="backdrop is-hidden">
-        <div class="modal"></div>
-    </div>
+  <ul class="library-film_list card-set"></ul>
+  <p class="library_alert"></p>
+  <div class="backdrop is-hidden">
+    <div class="modal"></div>
+  </div>
 </section>
