--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -7,4 +7,5 @@
 @import './components/filmCards';
 @import './components/footer';
 @import './base/modal';
-@import './components/team-modal'
+@import './components/team-modal';
+@import './layout/library';
