bacgraund color nigt

--- a/src/sass/base/_body.scss
+++ b/src/sass/base/_body.scss
@@ -22,8 +22,9 @@ body {
   // background-color: #ffffff;
   //   overflow-x: hidden;
 }
+
 .night {
-  background: #141414;
+  background: #272e34;
   transition: 0.5s;
 }
 
@@ -36,6 +37,7 @@ h6,
 p {
   margin: 0;
 }
+
 // .nigthText {
 //   color: #ffffff;
 // }
