--- a/src/templates/libraryCards.hbs
+++ b/src/templates/libraryCards.hbs
@@ -17,7 +17,7 @@
       <p class='film-genre'>
 {{#each this.genres}}{{this.name}}{{#unless @last}}, {{/unless}}{{/each}}
         &#8739;
-        {{this.release_date}} <span>{{this.vote_average}}</span>
+        {{this.release_date}} <span class="film-raiting">&nbsp;{{this.vote_average}}&nbsp;</span>
       </p>
     </div>
   </li>
