--- a/src/sass/layout/_header_library.scss
+++ b/src/sass/layout/_header_library.scss
@@ -48,13 +48,10 @@
   height: 42px;
   background: transparent;
   border-radius: 5px;
-
-  font-family: 'Roboto';
-  font-style: normal;
   font-weight: 500;
   font-size: 12px;
   line-height: 1.33;
-
+  text-transform: uppercase;
   border: 1px solid #ffffff;
 
   color: var(--secondaryTextColor);
