--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,30 +1,29 @@
 <header class="header ">
-    <div class="heder__dox container">
-        <include src="./partials/checkBox.html"></include>
-        <div class="logo-box">
-            <a href="./index.html"><span class="icon"><svg class="icon__logo" width="24" height="24">
-                        <use href="./images/srait.svg#icon-film"></use>
-                    </svg>
-                </span></a>
-
-            <a class="logo" href="./index.html"> Filmoteka
+    <div class="container">
+        <div class="heder__dox">
+            <include src="./partials/checkBox.html"></include>
+            <a class="icon" href="./index.html"><svg class="icon__logo" width="24" height="24">
+                    <use href="./images/srait.svg#icon-film"></use>
+                </svg>
+                <span class="logo">Filmoteka</span>
             </a>
+
+            <nav class="nav">
+                <ul class="nav__list">
+                    <li class="nav__item">
+                        <a class="nav__link nav-akcent" href="./index.html">Home</a>
+                    </li>
+                    <li class="nav__item">
+                        <a class="nav__link" href="./library.html">my library</a>
+                    </li>
+                </ul>
+            </nav>
         </div>
-        <nav class="nav">
-            <ul class="nav__list">
-                <li class="nav__item">
-                    <a class="nav__link nav-akcent" href="./index.html">Home</a>
-                </li>
-                <li class="nav__item">
-                    <a class="nav__link" href="./library.html">my library</a>
-                </li>
-            </ul>
-        </nav>
+        <form class="search-form" id="search-form">
+            <input class="imput_form" type="text" name="searchQuery" autocomplete="off" placeholder="Movie search" />
+            <button class="btn__form" type="submit"><svg class="" width="12" height="12">
+                    <use href="./images/srait.svg#icon-search"></use>
+                </svg></button>
+        </form>
     </div>
-    <form class="search-form" id="search-form">
-        <input class="imput_form" type="text" name="searchQuery" autocomplete="off" placeholder="Movie search" />
-        <button class="btn__form" type="submit"><svg class="" width="12" height="12">
-                <use href="./images/srait.svg#icon-search"></use>
-            </svg></button>
-    </form>
 </header>
