--- a/src/sass/base/_modal.scss
+++ b/src/sass/base/_modal.scss
@@ -10,14 +10,24 @@
   background-color: rgba(0, 0, 0, 0.2);
   opacity: 1;
   visibility: visible;
-  transition: opacity 500ms cubic-bezier(0.4, 0, 0.2, 1),
-    visibility 500ms cubic-bezier(0.4, 0, 0.2, 1);
+  // transition: opacity 500ms cubic-bezier(0.4, 0, 0.2, 1),
+  //   visibility 500ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: opacity 3s cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 4s cubic-bezier(0.4, 0, 0.2, 1);
 
-  &.is-hidden {
-    visibility: hidden;
-    opacity: 0;
-    pointer-events: none;
-  }
+  // &.is-hidden {
+  //   visibility: hidden;
+  //   opacity: 0;
+  //   pointer-events: none;
+  // }
+}
+
+
+
+.is-hidden {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
 }
 
 .modal {
@@ -26,12 +36,19 @@
   left: 50%;
   transform: translate(-50%, -50%) scale(1);
 
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12),
+    0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+  transition: transform 5s linear;
+
   width: 280px;
   background-color: white;
   padding: 0 20px;
   padding-top: 48px;
   padding-bottom: 40px;
   position: relative;
+  border-radius: 4px;
 
   @media screen and (min-width: 768px) {
     width: 704px;
@@ -45,6 +62,10 @@
     width: 806px;
     padding: 40px 12px;
   }
+}
+
+.beckdrop.is-hidden .modal {
+  transform: translate(-50%, -50%) scale(0) rotate(45deg);
 }
 
 .close-button {
@@ -188,6 +209,7 @@
   line-height: 1.33;
   text-transform: uppercase;
   color: var(--primaryTextColor);
+  margin-top: 20px;
   margin-bottom: 8px;
 }
 
