--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -4,9 +4,9 @@
 @import './layout/header';
 @import './layout/header_library';
 @import './components/checkBox';
-@import './components/filmCards';
-@import './components/footer';
+@import './layout/filmCards';
+@import './layout/footer';
 @import './base/modal';
 @import './components/team-modal';
 @import './layout/library';
-@import './components/pagination.scss';
+@import './layout/pagination';
