--- a/src/partials/cardsFilm.html
+++ b/src/partials/cardsFilm.html
@@ -1,8 +1,10 @@
-<section class="container">
+<section class="section-cards-film">
+  <div class="container">
   <ul class="cards-film_list card-set"></ul>
   <div id="pagination-container" class="pagination"></div>
   <div class="backdrop is-hidden">
     <div class="modal">
     </div>
+  </div>
   </div>
 </section>
